2010-11-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (tile-layout, set-tile-layout): Fill
	blanks if needed.

2010-11-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (tile-layout-ask-keep-position): New
	function to let the user choose to keep child position with
	tile layout.

	* src/clfswm-internal.lisp (remove-frame-data-slot): New
	function.

2010-11-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (frame-select-next-child)
	(frame-select-previous-child): New functions and bindings. Select
	the next/previous child in the current frame.

2010-10-31  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp (query-mode-complet): New function: Handle
	completion in query-mode.

2010-10-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp (query-print-string): Handle long lines
	correctly.

2010-10-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-create-window): Ensure that
	all characters are printable.

2010-10-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/server/server.lisp: Load clfswm client code in the main
	program and let the user start it with a --client command line
	option.

	* src/package.lisp (*main-entrance-hook*): New hook executed after
	loading configuration file and before opening the display.

2010-10-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp: Remove unnecessary xlib:display-finish-output.

	* src/clfswm-internal.lisp (show-child): Show window only if not
	hidden.

	* src/clfswm-keys.lisp (binding-substitute-modifier): Utility to
	change modifiers after binding definition.

2010-10-21  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/osd.lisp: New file: OSD (On Screen Display) for
	presentations.

	* src/clfswm-menu.lisp (open-menu): Modularise function.

2010-10-13  Philippe Brochard  <pbrochard@common-lisp.net>
