@@ -61,12 +61,13 @@
   (define-main-key ("Home" :mod-1) 'switch-to-root-frame)
   (define-main-key ("Home" :mod-1 :shift) 'switch-and-select-root-frame)
   (define-main-key ("F10" :mod-1) 'fast-layout-switch)
-  (define-main-key ("F10" :shift) 'show-all-frames-info-key)
-  (define-main-key ("F10" :shift :mod-1) 'show-all-frames-info)
   (define-main-key ("F10" :shift :control) 'toggle-show-root-frame)
-  (define-main-key ("F10") 'expose-windows-mode)
-  (define-main-key ("F10" :control) 'expose-all-windows-mode)
+  (define-main-key ("F10") 'expose-windows-current-child-mode)
+  (define-main-key ("F10" :control) 'expose-windows-mode)
+  (define-main-key ("F10" :control :shift) 'expose-all-windows-mode)
   (define-main-key ("L2" :control) 'present-clfswm-terminal)
+  (define-main-key ("L2" :shift) 'show-all-frames-info-key)
+  (define-main-key ("L2" :shift :mod-1) 'show-all-frames-info)
   (define-main-key (#\b :mod-1) 'banish-pointer)
   ;; Escape
   (define-main-key ("Escape" :control) 'ask-close/kill-current-window)
